--- a/src/components/pages/_admission-and-aid.scss
+++ b/src/components/pages/_admission-and-aid.scss
@@ -190,3 +190,171 @@
   max-width: rem(628);
   line-height: (29 / 18);
 }
+
+// Why Iowa State Section
+.admission-aid-why {
+  @include media-breakpoint-up(lg) {
+    display: flex;
+    align-items: flex-start;
+  }
+}
+.admission-aid-why__callouts {
+  text-align: center;
+  @include media-breakpoint-up(md) {
+    text-align: left;
+  }
+  @include media-breakpoint-up(lg) {
+    flex: 1 1 0;
+  }
+  ul {
+    padding-left: rem(36);
+    padding-right: rem(36);
+    margin-bottom: rem(50);
+    li {
+      margin-bottom: rem(42);
+      @include media-breakpoint-up(md) {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        margin-bottom: rem(30);
+      }
+    }
+  }
+  .link-tertiary {
+    font-size: rem(18);
+    line-height: (25 / 18);
+    padding: 0 rem(13);
+    @include media-breakpoint-up(md) {
+      padding: 0;
+    }
+    .arrow {
+      top: rem(11);
+    }
+  }
+}
+
+.admission-aid-why__callouts-label {
+  padding-left: rem(81);
+  padding-right: rem(81);
+  margin-bottom: rem(29);
+  @extend %h2-yellow-border;
+  @include media-breakpoint-up(md) {
+    padding-left: rem(36);
+    padding-right: 0;
+  }
+  &:after {
+    left: 50%;
+    margin-left: rem(-25);
+    @include media-breakpoint-up(md) {
+      margin-left: 0;
+      left: rem(36);
+    }
+  }
+}
+
+.admission-aid-why__callout-media {
+  @extend %responsive-img;
+  @include media-breakpoint-up(md) {
+    flex: 0 1 auto;
+    width: 40%;
+  }
+
+  &:before {
+    padding-top: 66.67%;
+  }
+}
+
+.admission-aid-why__callout-content {
+  @include media-breakpoint-up(md) {
+    flex: 0 1 auto;
+    width: 60%;
+    padding-left: rem(20);
+  }
+}
+
+.admission-aid-why__callout-title {
+  margin: rem(12) auto 0;
+  padding: 0 rem(37);
+  @include media-breakpoint-up(md) {
+    padding: 0;
+  }
+}
+
+.admission-aid-why__statistic {
+  margin-left: rem(36);
+  margin-right: rem(36);
+  padding-top: rem(55);
+  @include media-breakpoint-up(lg) {
+    margin: 0 rem(36) 0 0;
+    flex: 0 0 auto;
+    width: rem(324);
+  }
+  ul {
+    li {
+      margin-bottom: rem(29);
+      padding-top: rem(36);
+      position: relative;
+      &:last-child {
+        margin-bottom: 0;
+        &:after {
+          display: none;
+        }
+      }
+      &:after {
+        content: "";
+        border-bottom: rem(1) solid $iastate-gold;
+        position: absolute;
+        left: 50%;
+        width: rem(78);
+        margin-left: rem(-39);
+        bottom: rem(-32);
+      }
+      .statistic__title {
+        font-size: rem(53);
+        line-height: (66 / 53);
+      }
+      .statistic__text {
+        font-size: rem(16);
+        line-height: (26 / 16);
+        margin-top: rem(-2);
+      }
+    }
+  }
+}
+
+.admission-aid-why__statistic-label {
+  color: $white;
+  text-align: center;
+  margin: 0 0 rem(15) 0;
+  padding: 0;
+}
+
+// Afford Section
+.admission-aid-afford {
+  padding: rem(115) rem(36) rem(50);
+  .link-set {
+    text-align: center;
+  }
+}
+
+.admission-aid-afford__title {
+  @extend %h2-yellow-border;
+  text-align: center;
+  font-size: rem(37);
+  line-height: (48 / 37);
+  @include media-breakpoint-up(lg) {
+    font-size: rem(43);
+    line-height: (66 / 43);
+  }
+  &:after {
+    left: 50%;
+    margin-left: rem(-25);
+  }
+}
+
+.admission-aid-afford__intro {
+  text-align: center;
+  margin: rem(32) auto rem(46);
+  max-width: rem(628);
+  line-height: (29 / 18);
+}
