--- a/src/scss/_core/_typography.scss
+++ b/src/scss/_core/_typography.scss
@@ -4,6 +4,7 @@
 @font-face {
   font-family: "nimbus_sans_lregular";
   src: url("../../fonts/NimbusSanL-Reg-webfont.woff");
+  // src: url('https://cdn.theme.iastate.edu/nimbus-sans/fonts/NimbusSanL-Lig.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
