--- a/src/components/pages/admission-and-aid.twig
+++ b/src/components/pages/admission-and-aid.twig
@@ -86,7 +86,7 @@
 <div class="admission-aid-apply callout-inset">
   <div class="callout-inset_inset">
     <h2 class="callout-inset_inset-headline">{{ apply.title }}</h2>
-    <div>{{ apply.intro_text|raw }}</div>
+    <div class="callout-inset_inset-text">{{ apply.intro_text|raw }}</div>
     {% include "@button-set" with apply.button_set %}
   </div>
   <div class="feature-with-large-image">
