admission and aid setting up "connect" section

--- a/src/components/pages/_admission-and-aid.scss
+++ b/src/components/pages/_admission-and-aid.scss
@@ -530,3 +530,9 @@
     color: $iastate-red;
   }
 }
+
+// Connect Section
+.admission-aid-connect {
+  padding: rem(52) rem(36);
+  background-color: $off-white;
+}
