--- a/src/components/pages/admission-and-aid.twig
+++ b/src/components/pages/admission-and-aid.twig
@@ -119,4 +119,34 @@
   </div>
 </div>
 
-<div class="admission-aid-connect"></div>
+<div class="admission-aid-connect">
+  <h2 class="admission-aid-connect__title">{{ connect.title }}</h2>
+  <div class="admission-aid-connect__social">
+    <ul>
+      <li>
+        <a href="#" target="_blank">
+          <i class="fak fa-iastate22-instagram" aria-hidden="true"></i>
+          <span class="visible-for-screen-readers">Instagram</span>
+        </a>
+      </li>
+      <li>
+        <a href="#" target="_blank">
+          <i class="fa-brands fa-youtube" aria-hidden="true"></i>
+          <span class="visible-for-screen-readers">YouTube</span>
+        </a>
+      </li>
+      <li>
+        <a href="#" target="_blank">
+          <i class="fa-brands fa-facebook" aria-hidden="true"></i>
+          <span class="visible-for-screen-readers">Facebook</span>
+        </a>
+      </li>
+      <li>
+        <a href="#" target="_blank">
+          <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+          <span class="visible-for-screen-readers">Twitter</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
