admission aid progress - starting majors minors and certificates

--- a/src/components/hero/hero--top-level-lp.twig
+++ b/src/components/hero/hero--top-level-lp.twig
@@ -8,7 +8,9 @@
     <img src="{{image}}" alt="">
   </div>
   {% endif %}
+  {% if subnav_horizontal %}
   <div class="hero__subnav-wrap">
     {% include "@subnav--horizontal" with subnav_horizontal %}
   </div>
+  {% endif %}
 </div>
