--- a/src/components/pages/_admission-and-aid.scss
+++ b/src/components/pages/_admission-and-aid.scss
@@ -155,14 +155,28 @@
 
 // Explore Section
 .admission-aid-explore {
-  padding: rem(115) rem(36) rem(50);
+  padding-top: rem(115);
+  padding-bottom: rem(50);
+  @extend %outer-pad-x;
+  @include media-breakpoint-up(xl) {
+    padding-left: rem(190);
+    padding-right: rem(190);
+  }
+
   .video-embed {
     margin: 0 auto;
-    max-width: rem(1060);
   }
   .video-embed__media-wrap {
     margin-left: rem(-36);
     margin-right: rem(-36);
+    @include media-breakpoint-up(md) {
+      margin-left: rem(-70);
+      margin-right: rem(-70);
+    }
+    @include media-breakpoint-up(lg) {
+      margin-left: 0;
+      margin-right: 0;
+    }
   }
   .video-embed__caption {
     text-align: center;
@@ -193,6 +207,7 @@
 
 // Why Iowa State Section
 .admission-aid-why {
+  @extend %outer-pad-x;
   position: relative;
   @include media-breakpoint-up(lg) {
     display: flex;
@@ -201,14 +216,20 @@
     padding-top: rem(100);
     padding-bottom: rem(100);
   }
+  @include media-breakpoint-up(xl) {
+    padding-left: rem(190);
+    padding-right: rem(190);
+  }
   &:before,
   &:after {
     @include media-breakpoint-up(lg) {
       content: "";
       position: absolute;
-      left: 0;
-      right: 0;
+      left: 50%;
+      transform: translate(-50%, 0);
+      width: 100%;
       border-top: rem(1) solid $light-grey;
+      max-width: rem(1276);
     }
   }
   &:before {
@@ -227,8 +248,6 @@
     flex: 1 1 0;
   }
   ul {
-    padding-left: rem(36);
-    padding-right: rem(36);
     margin-bottom: rem(50);
     li {
       margin-bottom: rem(42);
@@ -237,16 +256,13 @@
         flex-wrap: wrap;
         align-items: center;
         margin-bottom: rem(30);
+        padding-right: rem(50);
       }
     }
   }
   .link-tertiary {
     font-size: rem(18);
     line-height: (25 / 18);
-    padding: 0 rem(13);
-    @include media-breakpoint-up(md) {
-      padding: 0;
-    }
     .arrow {
       bottom: rem(12);
     }
@@ -254,20 +270,14 @@
 }
 
 .admission-aid-why__callouts-label {
-  padding-left: rem(81);
-  padding-right: rem(81);
   margin-bottom: rem(29);
   @extend %h2-yellow-border;
-  @include media-breakpoint-up(md) {
-    padding-left: rem(36);
-    padding-right: 0;
-  }
   &:after {
     left: 50%;
     margin-left: rem(-25);
     @include media-breakpoint-up(md) {
       margin-left: 0;
-      left: rem(36);
+      left: 0;
     }
   }
 }
@@ -285,6 +295,7 @@
 }
 
 .admission-aid-why__callout-content {
+  margin-top: rem(12);
   @include media-breakpoint-up(md) {
     flex: 0 1 auto;
     width: 60%;
@@ -305,7 +316,7 @@
   margin-right: rem(36);
   padding-top: rem(55);
   @include media-breakpoint-up(lg) {
-    margin: 0 rem(36) 0 0;
+    margin: 0;
     flex: 0 0 auto;
     width: rem(324);
   }
@@ -352,7 +363,13 @@
 // Afford Section
 .admission-aid-afford {
   position: relative;
-  padding: rem(60) rem(36) rem(50);
+  padding-top: rem(60);
+  padding-bottom: rem(50);
+  @extend %outer-pad-x;
+  @include media-breakpoint-up(xl) {
+    padding-left: rem(190);
+    padding-right: rem(190);
+  }
   .link-set {
     text-align: center;
   }
@@ -396,9 +413,6 @@
         position: relative;
         margin-bottom: 0;
       }
-      &:last-child {
-        margin-bottom: 0;
-      }
       &:after {
         @include media-breakpoint-up(md) {
           content: "";
@@ -408,6 +422,12 @@
           width: rem(2);
           border-right: rem(2) solid $off-white;
           right: rem(37);
+        }
+      }
+      &:last-child {
+        margin-bottom: 0;
+        &:after {
+          display: none;
         }
       }
     }
@@ -457,7 +477,11 @@
       }
     }
   }
+  .feature-with-large-image {
+    margin-top: rem(-20);
+  }
   .feature-with-large-image__content {
+    margin: rem(57) 0 rem(20);
     .link-secondary {
       color: $white;
       .arrow {
@@ -474,7 +498,11 @@
 // Links Section
 
 .admission-aid-links {
-  padding: rem(52) rem(36);
+  padding: rem(52) rem(36) 0;
+  @include media-breakpoint-up(lg) {
+    padding-left: rem(70);
+    padding-right: rem(70);
+  }
 }
 .admission-aid-links__intro {
   text-align: center;
@@ -493,46 +521,183 @@
 }
 .admission-aid-links__link-list {
   margin-top: rem(55);
+  @include media-breakpoint-up(lg) {
+    margin-bottom: rem(70);
+  }
   ul {
+    @include media-breakpoint-up(lg) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+    @include media-breakpoint-up(xl) {
+      flex-wrap: nowrap;
+    }
     li {
       border-bottom: rem(2) solid $iastate-gold;
       margin-left: rem(-36);
       margin-right: rem(-36);
       padding: rem(11) rem(36);
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      text-align: center;
+      @include media-breakpoint-up(lg) {
+        border: none;
+        flex: 0 1 auto;
+        width: 40%;
+      }
+      @include media-breakpoint-up(xl) {
+        width: auto;
+        flex: 1 1 0;
+      }
       &:first-child {
         border-top: rem(2) solid $iastate-gold;
+        @include media-breakpoint-up(lg) {
+          border: none;
+        }
+      }
+      .admission-aid-links__link-list-link {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        text-align: center;
+        max-width: rem(450);
+        margin-left: auto;
+        margin-right: auto;
+        text-decoration: none;
+        color: $iastate-maroon;
+        @include media-breakpoint-up(lg) {
+          max-width: none;
+          flex-direction: column;
+        }
+        &:hover {
+          color: $iastate-red;
+        }
       }
     }
   }
 }
+
 .admission-aid-links__link-list-icon {
   flex: 0 0 auto;
   width: rem(65);
   display: flex;
   align-items: center;
   justify-content: center;
+  @include media-breakpoint-up(lg) {
+    width: rem(130);
+  }
 }
-.admission-aid-links__link-list-link {
+.admission-aid-links__link-list-link-text {
   flex: 1 1 0px;
   font-family: $nimbus-sans-bold;
   font-weight: 700;
-  color: $iastate-maroon;
+  color: currentColor;
   font-size: rem(21);
   line-height: (30 / 21);
-  text-decoration: none;
   padding: 0 rem(20);
   transition: 0.2s color ease-in-out;
-  &:hover {
-    color: $iastate-red;
-  }
 }
 
 // Connect Section
 .admission-aid-connect {
-  padding: rem(52) rem(36);
+  padding: rem(55);
+  padding-bottom: rem(10);
+  @extend %outer-pad-x;
   background-color: $off-white;
+  position: relative;
+  @include media-breakpoint-up(xl) {
+    padding-left: rem(190);
+    padding-right: rem(190);
+  }
+  &:before {
+    @include media-breakpoint-up(xl) {
+      content: "";
+      position: absolute;
+      left: -50vw;
+      width: 150vw;
+      top: 0;
+      bottom: 0;
+      background-color: $off-white;
+      z-index: -1;
+    }
+  }
+}
+
+.admission-aid-connect__title {
+  text-align: center;
+  font-size: rem(37);
+  line-height: (48 / 37);
+  @extend %h2-yellow-border;
+  &:after {
+    left: 50%;
+    margin-left: rem(-25);
+  }
+}
+
+.admission-aid-connect__social {
+  margin: rem(30) auto 0;
+  max-width: rem(320);
+  ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: rem(27) 0;
+    li {
+      margin-right: rem(15);
+      a {
+        border: rem(2) solid $iastate-maroon;
+        border-radius: 50%;
+        width: rem(52);
+        height: rem(52);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: $white;
+        transition: 0.2s background-color ease-in-out;
+        &:hover {
+          background-color: $iastate-gold;
+        }
+        svg {
+          color: $iastate-maroon;
+          font-size: rem(25);
+        }
+      }
+    }
+  }
+}
+
+.admission-aid-connect__sections {
+  margin-top: rem(61);
+  > ul {
+    @include media-breakpoint-up(lg) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-right: rem(-40);
+    }
+    > li {
+      margin-bottom: rem(54);
+      @include media-breakpoint-up(lg) {
+        flex: 1 1 0px;
+        padding-right: rem(40);
+      }
+    }
+  }
+  .link-set {
+    margin-top: rem(12);
+    ul {
+      li {
+        margin-bottom: rem(3);
+        .link-set__link {
+          font-size: rem(18);
+          line-height: (26 / 18);
+        }
+      }
+    }
+  }
+}
+.admission-aid-connect__section-title {
+  @extend %h2;
+  padding: 0;
+  margin: 0 0 rem(18) 0;
+}
+.dmission-aid-connect__section-description {
 }
