--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -64,3 +64,4 @@
 // Pages
 @import "../components/pages/home";
 @import "../components/pages/admission-and-aid";
+@import "../components/pages/top-level-pages";
