--- a/src/components/form/form.twig
+++ b/src/components/form/form.twig
@@ -1,4 +1,4 @@
-<form class="form" id="myForm" action="#" method="post">
+<form class="iastate22-form" id="myForm" action="#" method="post">
 
   <div class="form-item">
     <label for="name">Text Input</label>
