updating callout-inset component background color

--- a/src/components/callout-inset/_callout-inset.scss
+++ b/src/components/callout-inset/_callout-inset.scss
@@ -17,10 +17,20 @@
     @include media-breakpoint-up(lg) {
       background-color: transparent;
     }
-  }
-  .feature-with-large-image {
     &:before {
       display: none;
+    }
+    &:after {
+      @include media-breakpoint-up(lg) {
+        content: "";
+        position: absolute;
+        background-color: $white;
+        top: 50%;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: -1;
+      }
     }
   }
   .feature-with-large-image__content {
@@ -58,6 +68,7 @@
       left: rem(100);
       right: 50%;
       z-index: 0;
+      bottom: 0;
     }
     @include media-breakpoint-up(xl) {
       left: rem(180);
