--- a/src/components/pages/majors-minors-certificates.twig
+++ b/src/components/pages/majors-minors-certificates.twig
@@ -8,4 +8,19 @@
       </div>
     </div>
   </div>
+
+  <div class="maj-min-cert-explore">
+    <h2 class="maj-min-cert-explore__title">{{ explore.title }}</h2>
+    {% include "@button-set" with explore.button_set %}
+  </div>
+
+  <form class="iastate22-form maj-min-cert-program-search">
+    <h2 class="maj-min-cert-program-search__title">{{ search.title }}</h2>
+    <label class="search-label" for="search">{{ search.form.label }}</label>
+    <input id="search" type="text">
+    <div class="form-item">
+      <button value="Search" type="submit">{{ search.form.button_text }}<span class="arrow"></span></button>
+    </div>
+  </form>
+
 </div>
