--- a/src/components/hero/hero--top-level-lp.twig
+++ b/src/components/hero/hero--top-level-lp.twig
@@ -1,6 +1,6 @@
 <div class="hero hero--top-level-lp">
   <div class="hero__text-wrap">
-    {% include "@breadcrumb" with breadcrumbs %}
+    {% include "@breadcrumb--top-level-pages" with breadcrumbs %}
     <h1 class="hero__title">{{title}}</h1>
   </div>
   {% if image %}
