--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -65,3 +65,4 @@
 @import "../components/pages/home";
 @import "../components/pages/admission-and-aid";
 @import "../components/pages/top-level-pages";
+@import "../components/pages/college-template";
