--- a/src/components/pages/college-template.twig
+++ b/src/components/pages/college-template.twig
@@ -41,4 +41,94 @@
           {% endfor %}
         </ul>
     </div>
+
+    <div class="college-maj-min-certs" id="{{ maj_min_certs.id }}">
+      <div class="college-maj-min-certs__media">
+        <img src="{{ maj_min_certs.image|path }}" alt="" />
+      </div>
+      <div class="college-maj-min-certs__intro-wrap">
+        <h2 class="college-maj-min-certs__title">{{ maj_min_certs.title }}</h2>
+        <div class="college-maj-min-certs__intro">{{ maj_min_certs.intro|raw }}</div>
+        <h3 class="college-maj-min-certs__subhead">{{ maj_min_certs.subhead }}</h3>
+      </div>
+      <div class="maj-min-cert-program-list">
+        <ul>
+        {% for listing in maj_min_certs.listings %}
+          <li>
+            <a href="{{ listing.url }}" class="link-secondary">{{ listing.title }}<span class="arrow"></span></a>
+            <p class="maj-min-cert-program-list__program-type">{{ listing.program_type }}</p>
+          </li>
+        {% endfor %}
+        </ul>
+      </div>
+    </div>
+
+    <div class="college-research">
+      <div class="college-research__intro-wrap">
+        <h2 class="college-research__title">{{ research.title }}</h2>
+        <div class="college-research__intro">{{ research.intro|raw }}</div>
+        {% include "@button-set" with research.button_set %}
+      </div>
+      <div class="paragraph-widget paragraph-widget--external-news-story">
+        {% include "@external-news-story" with research.external_news_story %}
+      </div>
+    </div>
+
+    <div class="college-innovation">
+      <div class="college-innovation__intro-wrap">
+        <h2 class="college-innovation__title">{{ innovation.title }}</h2>
+        <div class="college-innovation__intro">{{ innovation.intro|raw }}</div>
+      </div>
+      <div class="paragraph-widget paragraph-widget--external-news-story">
+        {% include "@external-news-story" with innovation.external_news_story %}
+      </div>
+    </div>
+
+    <div class="college-opportunities">
+      <div class="paragraph-widget paragraph-widget--callout-inset">
+        {% include "@callout-inset" with opportunities.callout_inset %}
+      </div>
+    </div>
+
+    <div class="college-success">
+      <div class="college-success__intro-wrap">
+        <h2 class="college-success__title">{{ success.title }}</h2>
+        <div class="college-success__intro">{{ success.intro|raw }}</div>
+        {% include "@link-set" with success.link_set %}
+      </div>
+      <div class="college-success__career-paths">
+        <h3 class="college-success__career-paths-title">{{ success.career_paths.title }}</h3>
+        <ul>
+        {% for path in success.career_paths.paths %}
+          <li>
+            <p>{{ path }}</p>
+          </li>
+        {% endfor %}
+        </ul>
+      </div>
+      <div class="college-success__featured-story">
+        <h3 class="college-success__featured-story-title">{{ success.featured_story.title }}</h3>
+        {% include "@card--profile-with-modal" with success.featured_story.card %}
+      </div>
+    </div>
+
+    <div class="college-ctas">
+      <div class="college-ctas__cta college-ctas__cta-top">
+        <h2 class="college-ctas__cta-title">{{ ctas.cta_one.title }}</h2>
+        <div class="college-ctas__cta-intro">{{ ctas.cta_one.intro|raw }}</div>
+        {% include "@button-set" with ctas.cta_one.button_set %}
+      </div>
+      <div class="college-ctas__cta-media">
+        <img src="{{ ctas.image|path }}" alt="" />
+      </div>
+      <div class="college-ctas__cta college-ctas__cta-bottom">
+        <h2 class="college-ctas__cta-title">{{ ctas.cta_two.title }}</h2>
+        <div class="college-ctas__cta-intro">{{ ctas.cta_two.intro|raw }}</div>
+        {% include "@button-set" with ctas.cta_two.button_set %}
+      </div>
+    </div>
+
+    <div class="college-keep-exploring">
+      {% include "@call-to-action--small" with keep_exploring.call_to_action_small %}
+    </div>
 </div>
